style.css
body {
  margin: 0px;
  padding: 0px;
  background-color: rgb(0, 0, 0);
  color: rgb(246, 246, 246);
  font-family: 'Roboto Flex', sans-serif;

  box-sizing: border-box;
  height: 100vh;
  display: flex;
  flex-flow: column;
}

/* MAIN */

.main {
  display: flex;
  justify-content: center;
  align-items: center;

  flex: 1 1 auto;
}

.calculator {
  width: 76.5vw;
  display: flex;
  flex-flow: column;
  gap: 10px;

  flex: 0 1 auto;
}

/* DISPLAY */

.display {
  display: flex;
  flex-flow: column;
  text-align: right;
}

.bufferTrim {
  flex: 0 1 6vw;
  
  font-size: 6vw;
  font-weight: 400;
  color: rgb(180, 180, 180);
  
  overflow: hidden;
  white-space: nowrap;
  }

.buffer {
  float: right;
}

.currentTrim {
  flex: 0 1 content;
  
  font-size: 10vw;
  font-weight: 500;
  
  overflow: hidden;
  white-space: nowrap;
}

.currentNumber {
  float: right;
}

/* KEYBOARD */

.keyboard {
  display: inline-grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 1.5vw;
  justify-items: center;
}

button {
  font-family: 'Roboto Flex', sans-serif;
  font-weight: 600;
  color: rgb(246, 246, 246);
  font-size: 9vw;
  background-color: rgb(49, 49, 49);
  border: none;
  border-radius: 50%;
  height: 18vw;
  width: 18vw;
}

.zero {
  grid-column: span 2;
  width: 36vw;
  border-radius: 9vw;
}

#equal, #add, #substract, #multiply, #divide, #square {
  font-size: 12vw;
}

.operatorBtn {
  background-color: rgb(246, 153, 6);
}

#AC, #C {
  color: rgb(0, 0, 0);
  background-color: rgb(159, 159, 159);
}


/* FOOTER */

.footer {
  font-size: 12px;
  text-align: center;
  padding: 10px;
  color: rgb(180, 180, 180);
 
  flex: 0 1 auto;
}

a {
  text-decoration: none;
  color: rgb(80, 80, 80);
}


/* Desktop scaling */
@media (min-width:500px) {
  .calculator {
    width: 43vh;
  }

  .bufferTrim {
    flex-basis: 3vh;    
    font-size: 3vh;
  }

  .currentNumber {
    font-size: 6vh;
    width: 43vh;
  }
  
  .keyboard {
    gap: 1vh;
  }
  
  button {
    font-size: 5vh;
    height: 10vh;
    width: 10vh;
  }
  
  .zero {
    width: 20vh;
    border-radius: 5vh;
  }
  
  #equal, #add, #substract, #multiply, #divide, #square {
    font-size: 6vh;
  }
}

